# nitro-cli

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  SKILL.md  datastore-readme.md  main.py  project-plan.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publishing.yml
docs/: DATASTORE_NEW_FEATURES.md  Data Store.md
docs/components/: footer.py  header.py
docs/pages/: home.py
src/nitro/: __init__.py  cli.py
src/nitro/commands/: __init__.py  build.py  clean.py  deploy.py  dev.py  docs.py  generate.py  info.py  new.py  preview.py  scaffold.py  serve.py  test.py
src/nitro/core/: __init__.py  bundler.py  cache.py  collections.py  config.py  datastore.py  generator.py  images.py  islands.py  markdown.py  page.py  project.py  query_builder.py  renderer.py  server.py  watcher.py
src/nitro/plugins/: __init__.py  base.py  loader.py
src/nitro/templates/blog/: README.md  nitro.config.py
src/nitro/templates/blog/src/components/: footer.py  header.py
src/nitro/templates/blog/src/data/: site.json
src/nitro/templates/blog/src/pages/: about.py  index.py
src/nitro/templates/default/: README.md  nitro.config.py
src/nitro/templates/default/src/components/: footer.py  header.py
src/nitro/templates/default/src/pages/: about.py  index.py
src/nitro/templates/default/src/styles/: main.css
src/nitro/templates/portfolio/: README.md  nitro.config.py
src/nitro/templates/portfolio/src/components/: footer.py  header.py
src/nitro/templates/portfolio/src/data/: site.json
src/nitro/templates/portfolio/src/pages/: about.py  index.py
src/nitro/templates/website/: README.md  nitro.config.py
src/nitro/templates/website/src/components/: footer.py  header.py
src/nitro/templates/website/src/data/: site.json
src/nitro/templates/website/src/pages/: about.py  index.py
src/nitro/utils/: __init__.py  logger.py
tests/: __init__.py  test_bundler.py  test_cli.py  test_config.py  test_datastore.py  test_generator.py  test_renderer.py
